--- a/settings.cfg
+++ b/settings.cfg
@@ -1,11 +1,9 @@
 [Options]
 # path to audit log
-audit_log=/var/log/auth.log
+audit_log = /var/log/auth.log
 # number of days for first ban
-interval= 3 
+ban_length = 3
 # number of failed attempts since last run to earn ban
-interval_count = 50
-# mutiplier of first ban for each new ban
-interval_multiple = 3
+ban_threshold = 50
 # max ban days
 max_ban = 90
